--- a/backend/gqlgen.yml
+++ b/backend/gqlgen.yml
@@ -31,23 +31,18 @@ resolver:
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
-autobind:
-  - "TakuroSugahara/plactice-go-project/view/model"
+# autobind:
+#   - "TakuroSugahara/plactice-go-project/view/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
 # The first line in each type will be used as defaults for resolver arguments and
 # modelgen, the others will be allowed when binding to fields. Configure them to
 # your liking
-# models:
-  # ID:
-    # model:
-      # - github.com/99designs/gqlgen/graphql.ID
-      # - github.com/99designs/gqlgen/graphql.Int
-      # - github.com/99designs/gqlgen/graphql.Int64
-      # - github.com/99designs/gqlgen/graphql.Int32
-  # Int:
-    # model:
-      # - github.com/99designs/gqlgen/graphql.Int
-      # - github.com/99designs/gqlgen/graphql.Int64
-      # - github.com/99designs/gqlgen/graphql.Int32
+models:
+  User:
+    model:
+      - TakuroSugahara/plactice-go-project/view/model.User
+  Post:
+    model:
+      - TakuroSugahara/plactice-go-project/view/model.Post
